# MCU-bench

./: README.md  check_frequency_multicore.py
basic_operations/c_c++/: CMakeLists.txt
blas/c_c++/: multicore.c
blas/c_c++/mcu_blas_float/: CMakeLists.txt  multicore.c
blas/c_c++/mcu_blas_int/: multicore.c
blas/micropython/: mcu_blas.py  mcu_blas_float.py
c_c++/mcu_blas_float/: multicore.c
c_c++/mcu_blas_int/: multicore.c
micropython/: mcu_blas_float.py  mcu_blas_int.py
operations/c_c++/: multicore.c
operations/c_c++/mcu_operations_float/: multicore.c
operations/c_c++/mcu_operations_int/: multicore.c
operations/micropython/: mcu_operations_float.py  mcu_operations_int.py
